k8s/hvault/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hashicorp-vault
spec:
  selector:
    matchLabels:
      app: hashicorp-vault
  serviceName: hashicorp-vault
  replicas: 1
  template:
    metadata:
      labels:
        app: hashicorp-vault
    spec:
      containers:
      - name: vault
        image: vault:1.8.2
        args:
          - vault
          - server
          - -config
          - /config/config
        ports:
          - name: http
            containerPort: 8200
        securityContext:
          capabilities:
            add: ["IPC_LOCK"]
        volumeMounts:
        - name: datadir
          mountPath: /vault/file
        - name: vault-config
          mountPath: /config
      volumes:
      - name: vault-config
        configMap:
          name: vault-config
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
