k8s/hvault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashicorp-vault
spec:
  selector:
    app: hashicorp-vault
  ports:
    - port: 80
      targetPort: http
