k8s/hvault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashicorp-vault
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nixos
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashicorp-vault
            port:
              number: 80
  - host: nixos.local.vassast.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hashicorp-vault
            port:
              number: 80
